@@ -505,6 +505,7 @@
 #define ID_GRAPH_PRESETS_LAST30MINUTES  32926
 #define ID_OBJECT_UNBIND                32929
 #define ID_OBJECT_CHANGEIPADDRESS       32930
+#define ID_LASTVALUES_PROPERTIES        32931
 #define IDS_GETFOLDERPATH_FAILED        61216
 #define IDS_WORKDIR_CREATION_FAILED     61217
 
@@ -514,7 +515,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_3D_CONTROLS                     1
 #define _APS_NEXT_RESOURCE_VALUE        273
-#define _APS_NEXT_COMMAND_VALUE         32931
+#define _APS_NEXT_COMMAND_VALUE         32932
 #define _APS_NEXT_CONTROL_VALUE         1257
 #define _APS_NEXT_SYMED_VALUE           121
 #endif
