@@ -2,3 +2,4 @@ Additional files required for installation:
 
 MFC42.DLL
 LIBSNMP.DLL
+LIBMYSQL.DLL
